src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Admissions</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>No Ins or Payment</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Admissions_Alert_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admissions Alert Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alumni_Team_Friends_of_Alumni__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Friends of Alumni</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Alumni Team - Friends of Alumni)</relationshipLabel>
        <relationshipName>Leads6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>If Private Pay, Amount Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Remaining__c</fullName>
        <label>Amount Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Needs approval from supervisor.</description>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Preliminary approval</description>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessments_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessments Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BC_PREFIX__c</fullName>
        <formula>IF (or( contains( Insurance_Company_Name__c , &quot;BC&quot;), contains ( Insurance_Company_Name__c , &quot;BCBS&quot;) , contains ( Insurance_Company_Name__c , &quot;Blue&quot;),CONTAINS (Insurance_Company_Name__c ,&quot;Anthem&quot;),contains ( Insurance_Company_Name__c , &quot;Empire&quot;)), LEFT( Member_ID_Number__c ,3),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BC PREFIX</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Calling_for__c</fullName>
        <label>Brand Calling for</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Haven</fullName>
                </value>
                <value>
                    <fullName>Recovery Team</fullName>
                </value>
                <value>
                    <fullName>Indiana Center for Recovery</fullName>
                </value>
                <value>
                    <fullName>Lake Avenue Recovery</fullName>
                </value>
                <value>
                    <fullName>&quot;Treatment&quot;</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTMCTMCallId__c</fullName>
        <description>Upsert External ID</description>
        <externalId>true</externalId>
        <label>CTMCallId</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTMCTMDidLost__c</fullName>
        <label>CTMDidLost</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTM_Agent_Name__c</fullName>
        <label>CTM Agent Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Call_Date__c</fullName>
        <label>CTM Call Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Call_ID2__c</fullName>
        <label>CTM Call ID2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Campaign__c</fullName>
        <label>CTM Campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTM_Contact_Name2__c</fullName>
        <label>CTM Contact Name2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Contact_Name__c</fullName>
        <label>CTM Contact Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Conversion_Amount__c</fullName>
        <label>CTM Conversion Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Conversion_Date__c</fullName>
        <label>CTM Conversion Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Converted__c</fullName>
        <label>CTM Converted</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Email__c</fullName>
        <label>CTM Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Landing_Page__c</fullName>
        <label>CTM Landing Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTM_Length_of_Residence__c</fullName>
        <label>CTM Length of Residence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Message_Body__c</fullName>
        <label>CTM Message Body</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Receiving_Number_Description__c</fullName>
        <label>CTM Receiving Number Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Recording_URL__c</fullName>
        <label>CTM Recording URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CTM_Reporting_Tag__c</fullName>
        <label>CTM Reporting Tag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Ring_Time2__c</fullName>
        <label>CTM Ring Time2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Score__c</fullName>
        <label>CTM Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Source_Tag__c</fullName>
        <label>CTM Source Tag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Source__c</fullName>
        <label>CTM Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTM_Tags__c</fullName>
        <label>CTM Tags</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Talk_Time2__c</fullName>
        <label>CTM Talk Time2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Talking_Source__c</fullName>
        <label>CTM Talking Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Total_Time__c</fullName>
        <label>CTM Total Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Tracking_Number__c</fullName>
        <label>CTM Tracking Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Tracking_Source_Description__c</fullName>
        <label>CTM Tracking Source Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Transcription_Text__c</fullName>
        <label>CTM Transcription Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Transfer_To__c</fullName>
        <label>CTM Transfer To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Type__c</fullName>
        <label>CTM Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Campaign__c</fullName>
        <label>Call Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_ID__c</fullName>
        <label>Call ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_ID_Caller_Phone__c</fullName>
        <description>Phone number of the person who originally called or the caller ID of the first call.</description>
        <label>Caller ID/Caller Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Calling_for_Whom__c</fullName>
        <label>Calling for Whom?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Caller_Client_Identity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Cash__c</fullName>
        <description>Amount for client cash only</description>
        <label>Client Cash</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Status_c__c</fullName>
        <label>Client Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Discharged</fullName>
                </value>
                <value>
                    <fullName>Referred</fullName>
                </value>
                <value>
                    <fullName>Termed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Insurance__c</fullName>
        <description>Co-Insurance</description>
        <label>Co-Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOA_to_Outbound_Referral_Facility__c</fullName>
        <label>DOA to Outbound Referral Facility</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <description>Date of Birth</description>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deductible_In_Net__c</fullName>
        <description>Deductible (In-Network)</description>
        <label>Deductible (In Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deductible_Met_In_Net__c</fullName>
        <description>Met deductible for In Network insurance.</description>
        <label>Deductible Met (In Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deductible_OON_Met__c</fullName>
        <label>Deductible Met (Out Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deductible_Out_Net__c</fullName>
        <description>Deductible (Out-of-Network)</description>
        <label>Deductible (Out Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <label>Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Detox__c</fullName>
        <label>Detox</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discharge_Facility__c</fullName>
        <description>Facility or agency discharging to.</description>
        <label>Discharge Facility</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discharge_to_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discharge Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Disposition</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocuSign__c</fullName>
        <description>Insert DocuSign fee agreement link.</description>
        <label>DocuSign</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Drug_of_Choice__c</fullName>
        <label>Drug of Choice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alcohol</fullName>
                </value>
                <value>
                    <fullName>Meth</fullName>
                </value>
                <value>
                    <fullName>Crack/Cocaine</fullName>
                </value>
                <value>
                    <fullName>Heroin</fullName>
                </value>
                <value>
                    <fullName>Opioids</fullName>
                </value>
                <value>
                    <fullName>Benzos</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_By__c</fullName>
        <label>Paid Through Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMR_Assesment__c</fullName>
        <description>Link to EMR assessment.</description>
        <label>EMR Assesment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ETA__c</fullName>
        <description>Estimated date and time of arrival.</description>
        <label>ETA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Employer_Phone__c</fullName>
        <label>Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Lead__c</fullName>
        <label>Facebook Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facebook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facility_Interest__c</fullName>
        <description>The Facility Lead is Interested in Admitting To</description>
        <label>Facility Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Haven Detox</fullName>
                </value>
                <value>
                    <fullName>Indiana Center for Recovery</fullName>
                </value>
                <value>
                    <fullName>Recovery Team</fullName>
                </value>
                <value>
                    <fullName>Lake Ave</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>Center City Recovery</fullName>
                    <isActive>false</isActive>
                    <label>Center City Recovery</label>
                </value>
                <value>
                    <fullName>Embrace MH</fullName>
                    <isActive>false</isActive>
                    <label>Embrace MH</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Agreement_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A completed and signed fee agreement has been received.</description>
        <label>Fee Agreement Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Contact_Notes__c</fullName>
        <description>Notes for the First call for Admissions Specialists</description>
        <label>First Contact Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Food__c</fullName>
        <description>Amount for food</description>
        <label>Food</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Form_Date_Time_Stamp__c</fullName>
        <label>Form Date &amp; Time Stamp</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Location__c</fullName>
        <label>Caller Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Local</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <label>GCLID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>male</fullName>
                </value>
                <value>
                    <fullName>female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender_c__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <description>Group Number</description>
        <label>Group Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IOP_Cost__c</fullName>
        <description>IOP Cost</description>
        <label>IOP Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InsuranceInfo__c</fullName>
        <label>Other Insurance Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Insurance_Company_Name__c</fullName>
        <description>Insurance Company Name</description>
        <label>Insurance Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Phone__c</fullName>
        <description>Phone number for provider services.</description>
        <label>Insurance Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Campaign__c</fullName>
        <label>Lead Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Name__c</fullName>
        <formula>FirstName  &amp; &quot; &quot; &amp;   MiddleName  &amp;&quot; &quot; &amp;  LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail_Specific__c</fullName>
        <label>Lead Source Detail (Specific)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Marketing_Lead_Source_Specific__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adolfo Castellano</fullName>
                </value>
                <value>
                    <fullName>Austin Thomas</fullName>
                </value>
                <value>
                    <fullName>Billy Briggs</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Campaign A</fullName>
                </value>
                <value>
                    <fullName>Campaign L</fullName>
                </value>
                <value>
                    <fullName>Campaign LT</fullName>
                </value>
                <value>
                    <fullName>Campaign P</fullName>
                </value>
                <value>
                    <fullName>Campaign R</fullName>
                </value>
                <value>
                    <fullName>CCR Facebook Call Now</fullName>
                </value>
                <value>
                    <fullName>CCR Google Organic</fullName>
                </value>
                <value>
                    <fullName>CCR Main</fullName>
                </value>
                <value>
                    <fullName>CCR Psychology Today</fullName>
                </value>
                <value>
                    <fullName>Daniel Delemo</fullName>
                </value>
                <value>
                    <fullName>Facebook Call Now</fullName>
                </value>
                <value>
                    <fullName>Google Ads</fullName>
                </value>
                <value>
                    <fullName>Google Organic</fullName>
                </value>
                <value>
                    <fullName>Haven Addiction Center Listing</fullName>
                </value>
                <value>
                    <fullName>Haven Facebook</fullName>
                </value>
                <value>
                    <fullName>Haven Facebook Call Now</fullName>
                </value>
                <value>
                    <fullName>Haven FB</fullName>
                </value>
                <value>
                    <fullName>Haven Google 1</fullName>
                </value>
                <value>
                    <fullName>Haven Google 11</fullName>
                </value>
                <value>
                    <fullName>Haven Google Ads</fullName>
                </value>
                <value>
                    <fullName>Haven Listing</fullName>
                </value>
                <value>
                    <fullName>Haven Main</fullName>
                </value>
                <value>
                    <fullName>Haven Psychology Today</fullName>
                </value>
                <value>
                    <fullName>Haven Rehab.com</fullName>
                </value>
                <value>
                    <fullName>Haven Web</fullName>
                </value>
                <value>
                    <fullName>Haven WebMD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Type Detail</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Change_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Lead status change PB&apos;s to trigger a time flowed lead status change</description>
        <label>Lead Status Change Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Type_Detail__c</fullName>
        <label>Lead Type Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Treatment Center</fullName>
                </value>
                <value>
                    <fullName>Readmit</fullName>
                </value>
                <value>
                    <fullName>Friends of Alumni</fullName>
                </value>
                <value>
                    <fullName>Web Chat</fullName>
                </value>
                <value>
                    <fullName>Personal Relationship</fullName>
                </value>
                <value>
                    <fullName>Professional Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length_of_Program__c</fullName>
        <label>Length of Program</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level_of_Care__c</fullName>
        <description>LOC</description>
        <label>Level of Care</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Detox</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>IOP</fullName>
                </value>
                <value>
                    <fullName>OPT</fullName>
                </value>
                <value>
                    <fullName>Observation</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Lead_Source_Specific__c</fullName>
        <label>Marketing Lead Source (Specific)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alumni Referral</fullName>
                </value>
                <value>
                    <fullName>Bing Ads</fullName>
                </value>
                <value>
                    <fullName>Call_Campaigns</fullName>
                    <label>Call Campaigns</label>
                </value>
                <value>
                    <fullName>Directory Site Listing</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>Facebook Ads</fullName>
                </value>
                <value>
                    <fullName>Google Ads</fullName>
                </value>
                <value>
                    <fullName>Instagram Ads</fullName>
                </value>
                <value>
                    <fullName>Marketer Referral</fullName>
                </value>
                <value>
                    <fullName>Organic Search</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <label>Medium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PPC</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Referrer</fullName>
                </value>
                <value>
                    <fullName>Directory</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_ID_Number__c</fullName>
        <description>Member ID Number</description>
        <label>Member ID Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Funds__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Funds required for admission</description>
        <label>Needs Funds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <description>Alternate name patient goes by.</description>
        <label>Nickname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OOP_Met_In_Net__c</fullName>
        <description>Out of Pocket met amount. (In Network)</description>
        <label>OOP Met (In Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Referred_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Referred by</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Original Referred by)</relationshipLabel>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Out_Of_Pocket_Max_In_Network__c</fullName>
        <description>Out Of Pocket Max (In-Network)</description>
        <label>OOP Max (In Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Out_Of_Pocket_Max_Out_of_Network__c</fullName>
        <description>Out Of Pocket Max (Out-of-Network)</description>
        <label>OOP Max (Out Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Out_Of_Pocket_Met__c</fullName>
        <label>OOP Met (Out Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PHP_Days__c</fullName>
        <description>PHP Days</description>
        <label>PHP Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Age__c</fullName>
        <formula>TEXT (IF( NOT( ISBLANK( DOB__c) ) ,
  IF( DATE( 2000 , MONTH( DOB__c ) , DAY( DOB__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( DOB__c),
     YEAR (Today()) - YEAR ( DOB__c) -1 ),
  null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Birth_Date_c__c</fullName>
        <label>Patient Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_First_Name_c__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>